flow_fundamentals_unit/force-app/main/default/objects/Book_Line_Item__c/Book_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Book Line Item</label>
    <nameField>
        <displayFormat>BKLI-{0000000}</displayFormat>
        <label>Book Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Book Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>