flow_fundamentals_unit/force-app/main/default/objects/Book_Line_Item__c/fields/Book_Order__c.field-meta.xml
<CustomField>
    <fullName>Book_Order__c</fullName>
    <label>Book Order</label>
    <referenceTo>Book_Order__c</referenceTo>
    <relationshipLabel>Book Line Items</relationshipLabel>
    <relationshipName>Book_Line_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>