flow_fundamentals_unit/force-app/main/default/objects/Book_Line_Item__c/fields/Preordered__c.field-meta.xml
<CustomField>
    <fullName>Preordered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preordered</label>
    <type>Checkbox</type>
</CustomField>